[metadata]
name = elnino
summary = Rating as a Service component for OpenStack
description-file = 
	README.rst
author = OpenStack
author-email = openstack-dev@lists.openstack.org
home-page = https://docs.openstack.org/elnino/latest
classifier = 
	Environment :: OpenStack
	Intended Audience :: Information Technology
	Intended Audience :: System Administrators
	License :: OSI Approved :: Apache Software License
	Operating System :: POSIX :: Linux
	Programming Language :: Python
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.5

[files]
packages = 
	elnino

[entry_points]
console_scripts = 
	elnino-dbsync = elnino.cli.dbsync:main

wsgi_scripts = 
	elnino-api = elnino.api.app:build_wsgi_app
oslo.config.opts = 
	elnino.common.config = elnino.common.config:list_opts
oslo.config.opts.defaults = 
	elnino.common.config = elnino.common.defaults:set_cors_middleware_defaults
elnino.storage.backends =
	sqlalchemy = elnino.storage.sqlalchemy:SQLAlchemyStorage

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[global]
setup-hooks = 
	pbr.hooks.setup_hook

[egg_info]
tag_build = 
tag_date = 0

